--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ html body hr.line {
   margin-bottom: 40px;
 }
 
-html body button, html body input {
+html body button, html body input, html body select {
   outline: none;
   border: none;
 }
@@ -356,7 +356,7 @@ html body #main #company-info #main-image > .layer, html body #main #company-inf
 }
 
 html body #main #company-info #main-image {
-  background-image: url("../images/homePage/sl12.jpg");
+  background-image: url("../images/homePage/mainImage.jpg");
   background-position: top;
 }
 
@@ -436,7 +436,7 @@ html body #main #company-info #info-text-secondaryImage .text a:hover {
 html body #main #company-info #info-text-secondaryImage #secondary-image {
   height: 40%;
   width: 100%;
-  background-image: url("../images/homePage/sl5.jpg");
+  background-image: url("../images/homePage/secondaryImage.jpg");
   background-position: center;
 }
 
@@ -892,5 +892,201 @@ html body footer .row.copyright .col p {
   text-align: center;
   font-size: 1.2rem;
   margin: 0;
+}
+
+html body .popupCartFav {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: rgba(97, 56, 223, 0.9);
+  background-color: rgba(6, 188, 193, 0.9);
+  display: none;
+}
+
+html body .popupCartFav.open {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+html body .popupCartFav .popup-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 750px;
+  min-height: 570px;
+  background-color: #fefefe;
+  color: #6138df;
+  position: relative;
+  border-radius: 5px;
+  padding: 30px;
+}
+
+html body .popupCartFav .popup-content h2 {
+  text-align: center;
+  margin-bottom: 40px;
+  font-size: 2.4rem;
+}
+
+html body .popupCartFav .popup-content .cart {
+  width: 100%;
+}
+
+html body .popupCartFav .popup-content .cart button, html body .popupCartFav .popup-content .cart select {
+  background-color: #6138df;
+  color: #fefefe;
+  font-size: .95rem;
+  padding: 7px 12px;
+  border-radius: 4px;
+  -webkit-transition: .23s ease-in-out;
+  transition: .23s ease-in-out;
+  border: 1px solid #6138df;
+}
+
+html body .popupCartFav .popup-content .cart .cartTable {
+  width: 100%;
+}
+
+html body .popupCartFav .popup-content .cart .cartTable tr td, html body .popupCartFav .popup-content .cart .cartTable tr th {
+  border: 1px solid #6138df;
+  text-align: center;
+  padding: 4px;
+}
+
+html body .popupCartFav .popup-content .cart .cartTable tr td img, html body .popupCartFav .popup-content .cart .cartTable tr th img {
+  width: 40px;
+}
+
+html body .popupCartFav .popup-content .cart .cartTable tr td select, html body .popupCartFav .popup-content .cart .cartTable tr th select {
+  width: 70px;
+}
+
+html body .popupCartFav .popup-content .cart .cartTable tr td button:hover, html body .popupCartFav .popup-content .cart .cartTable tr td select:focus, html body .popupCartFav .popup-content .cart .cartTable tr th button:hover, html body .popupCartFav .popup-content .cart .cartTable tr th select:focus {
+  background-color: #fefefe;
+  color: #6138df;
+}
+
+html body .popupCartFav .popup-content .cart .cartFooter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+html body .popupCartFav .popup-content .cart .cartFooter p span {
+  color: #06BCC1;
+}
+
+html body .popupCartFav .popup-content .cart .cartFooter p:first-of-type {
+  margin-top: 30px;
+}
+
+html body .popupCartFav .popup-content .cart .cartFooter #buyBtn {
+  background-color: #fefefe;
+  margin-top: 14px;
+  color: #6138df;
+}
+
+html body .popupCartFav .popup-content .cart .cartFooter #buyBtn:hover {
+  background-color: #6138df;
+  color: #fefefe;
+  margin: 0 auto;
+}
+
+html body .popupCartFav .popup-content button#closePopupBtn {
+  color: #6138df;
+  background-color: transparent;
+  position: absolute;
+  top: 2%;
+  right: 4%;
+  font-size: 1.5rem;
+  -webkit-transition: .23s ease-in-out;
+  transition: .23s ease-in-out;
+}
+
+html body .popupCartFav .popup-content button#closePopupBtn:hover {
+  color: #06BCC1;
+}
+
+html body #toTop {
+  position: fixed;
+  bottom: 4%;
+  right: 3%;
+}
+
+html body #toTop button {
+  background-color: #6138df;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  font-size: 3rem;
+  color: #fefefe;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  -webkit-transition: .23s ease-in-out;
+  transition: .23s ease-in-out;
+}
+
+html body #toTop button i {
+  position: absolute;
+  top: -5%;
+}
+
+html body #toTop button i:nth-of-type(2) {
+  top: 15%;
+}
+
+html body #toTop button i:nth-of-type(3) {
+  top: 35%;
+}
+
+html body #toTop button:hover {
+  background-color: #fefefe;
+  color: #6138df;
 }
 /*# sourceMappingURL=style.css.map */
