--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,17 +123,20 @@ html body header .row .wrapper .col.contact-info {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 
 html body header .row .wrapper .col.contact-info p {
   display: inline;
-  margin: 0 7px;
+  margin: 0 10px;
   font-size: .86rem;
 }
 
 html body header .row .wrapper .col.contact-info p i {
   margin-right: 5px;
-  font-size: 1.1rem;
+  font-size: .9rem;
 }
 
 html body header .row .wrapper .col.cart-fav {
@@ -211,6 +214,18 @@ html body header .row .wrapper .col.navigation, html body header .row .wrapper .
           justify-content: center;
 }
 
+html body header .row .wrapper .col.navigation .closeNav, html body header .row .wrapper .col.search .closeNav {
+  display: none;
+  color: #6138df;
+  font-size: 1.6rem;
+  background-color: transparent;
+  position: absolute;
+  top: 1%;
+  width: 30px;
+  height: 30px;
+  right: 3%;
+}
+
 html body header .row .wrapper .col.navigation li, html body header .row .wrapper .col.search li {
   margin: 0 3px;
 }
@@ -233,21 +248,25 @@ html body header .row .wrapper .col.navigation form, html body header .row .wrap
 html body header .row .wrapper .col.navigation form ::-webkit-input-placeholder, html body header .row .wrapper .col.search form ::-webkit-input-placeholder {
   color: #fefefe;
   opacity: .8;
+  font-weight: 300;
 }
 
 html body header .row .wrapper .col.navigation form :-ms-input-placeholder, html body header .row .wrapper .col.search form :-ms-input-placeholder {
   color: #fefefe;
   opacity: .8;
+  font-weight: 300;
 }
 
 html body header .row .wrapper .col.navigation form ::-ms-input-placeholder, html body header .row .wrapper .col.search form ::-ms-input-placeholder {
   color: #fefefe;
   opacity: .8;
+  font-weight: 300;
 }
 
 html body header .row .wrapper .col.navigation form ::placeholder, html body header .row .wrapper .col.search form ::placeholder {
   color: #fefefe;
   opacity: .8;
+  font-weight: 300;
 }
 
 html body header .row .wrapper .col.navigation form input, html body header .row .wrapper .col.navigation form button, html body header .row .wrapper .col.search form input, html body header .row .wrapper .col.search form button {
@@ -289,6 +308,46 @@ html body header .row .wrapper .col.search {
           justify-content: flex-end;
 }
 
+html body header .row .wrapper .col.hamburgerBtn {
+  display: none;
+}
+
+html body header .row .wrapper .col.hamburgerBtn button {
+  padding: 7px 10px;
+  border-radius: 5px;
+  background-color: #fefefe;
+  border: 1px solid #6138df;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+}
+
+html body header .row .wrapper .col.hamburgerBtn button div {
+  width: 100%;
+  background-color: #6138df;
+  margin: 4px 0;
+  height: 2px;
+  border-radius: 3px;
+  -webkit-transition: .4s ease-in-out;
+  transition: .4s ease-in-out;
+}
+
+html body header .row .wrapper .col.hamburgerBtn button div.fadeOut {
+  -webkit-transform: translateX(-100px);
+          transform: translateX(-100px);
+  opacity: 0;
+}
+
+html body header .row .wrapper .col.hamburgerBtn button div.rotate1 {
+  -webkit-transform: translateY(-6px) rotate(-45deg);
+          transform: translateY(-6px) rotate(-45deg);
+}
+
+html body header .row .wrapper .col.hamburgerBtn button div.rotate2 {
+  -webkit-transform: translateY(6px) rotate(45deg);
+          transform: translateY(6px) rotate(45deg);
+}
+
 html body header .row.secondary-header {
   padding: 8px 0;
   color: #fefefe;
@@ -307,6 +366,11 @@ html body #main #banner #banner-image {
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+html body #main #banner #banner-image.contactBanner {
+  background: url("../images/contact/cont3.jpg");
+  background-position: left;
 }
 
 html body #main #banner #banner-image #banner-layer {
@@ -514,7 +578,7 @@ html body #main #services h2 {
 }
 
 html body #main #services .service-blocks {
-  width: 50%;
+  width: 55%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -934,7 +998,8 @@ html body #main .wrapper #shop .books .book:hover .seeMore {
 }
 
 html body #main .wrapper #shop .books .book img {
-  height: 250px;
+  height: 260px;
+  width: 180px;
   border-radius: 7px;
 }
 
@@ -1252,6 +1317,179 @@ html body #main .wrapper #shop .seeMore-outer .seeMore-content > div .closeBtn {
 
 html body #main .wrapper #shop .seeMore-outer .seeMore-content > div .closeBtn:hover {
   color: #6138df;
+}
+
+html body #main .contactForm {
+  padding: 90px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+html body #main .contactForm form {
+  width: 40%;
+  border-radius: 5px;
+  border: 1px solid #6138df;
+  padding: 40px 70px;
+}
+
+html body #main .contactForm form h2 {
+  font-size: 2.1rem;
+  text-align: center;
+}
+
+html body #main .contactForm form hr.line {
+  height: 3px;
+  margin: 15px auto 40px auto;
+  width: 40%;
+  background-color: #6138df;
+}
+
+html body #main .contactForm form .formRow {
+  width: 100%;
+  padding: 0;
+  margin: 15px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+html body #main .contactForm form .formRow .formField {
+  position: relative;
+  padding: 10px;
+  width: 50%;
+}
+
+html body #main .contactForm form .formRow .formField label {
+  position: absolute;
+  top: 30%;
+  margin-left: 12px;
+  font-size: .9rem;
+  cursor: text;
+  -webkit-transition: .23s ease-in-out;
+  transition: .23s ease-in-out;
+}
+
+html body #main .contactForm form .formRow .formField label.focused {
+  top: -25%;
+}
+
+html body #main .contactForm form .formRow .formField input {
+  color: #6138df;
+  height: 100%;
+  padding: 7px  15px;
+  border-bottom: 1px solid #6138df;
+  border: 1px solid #6138df;
+  border-radius: 7px;
+  font-size: .94rem;
+}
+
+html body #main .contactForm form .formRow .formField select {
+  padding: 4px 12px;
+  color: #6138df;
+  background-color: #fefefe;
+  border: 1px solid #6138df;
+  border-radius: 5px;
+}
+
+html body #main .contactForm form .formRow .formField textarea {
+  color: #6138df;
+  width: 100%;
+  border: 1px solid #6138df;
+  padding: 10px;
+  border-radius: 7px;
+  outline: none;
+}
+
+html body #main .contactForm form .formRow .formField input[type="text"], html body #main .contactForm form .formRow .formField input[type="password"] {
+  margin: 0;
+  width: 100%;
+}
+
+html body #main .contactForm form .formRow .formField.email, html body #main .contactForm form .formRow .formField.terms, html body #main .contactForm form .formRow .formField.messageField {
+  width: 100%;
+}
+
+html body #main .contactForm form .formRow .formField button {
+  position: absolute;
+  right: 7%;
+  top: 30%;
+  background-color: transparent;
+  color: #6138df;
+  font-size: 1.1rem;
+  -webkit-transition: .23s ease-in-out;
+  transition: .23s ease-in-out;
+}
+
+html body #main .contactForm form .formRow .formField button:hover {
+  color: #06BCC1;
+}
+
+html body #main .contactForm form .formRow .formField p {
+  margin: 0 10px;
+  margin-bottom: 0;
+}
+
+html body #main .contactForm form p.error {
+  display: none;
+  color: #06BCC1;
+}
+
+html body #main .contactForm form .outerLabel {
+  font-size: 1.14rem;
+  margin-top: 25px;
+  margin-left: 8px;
+}
+
+html body #main .contactForm form .btns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+html body #main .contactForm form .btns input {
+  color: #fefefe;
+  background-color: #6138df;
+  margin: 0 10px;
+  border-radius: 4px;
+  padding: 4px 15px;
+  border: 1px solid #6138df;
+  -webkit-transition: .23s ease-in-out;
+  transition: .23s ease-in-out;
+  font-size: 1.1rem;
+}
+
+html body #main .contactForm form .btns input:hover {
+  color: #6138df;
+  background-color: #fefefe;
 }
 
 html body footer {
@@ -1779,6 +2017,83 @@ html body #toTop button i:nth-of-type(3) {
 html body #toTop button:hover {
   background-color: #fefefe;
   color: #6138df;
+}
+
+html body #submitedForm {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: rgba(6, 188, 193, 0.9);
+  display: none;
+}
+
+html body #submitedForm.open {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+html body #submitedForm .content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 600px;
+  min-height: 350px;
+  max-height: 90vh;
+  background-color: #fefefe;
+  color: #6138df;
+  position: relative;
+  border-radius: 7px;
+  padding: 30px;
+}
+
+html body #submitedForm .content h4 {
+  text-align: center;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 400;
+}
+
+html body #submitedForm .content button.closeBtn {
+  color: #6138df;
+  background-color: transparent;
+  position: absolute;
+  top: 4%;
+  right: 5%;
+  font-size: 1.5rem;
+  -webkit-transition: .23s ease-in-out;
+  transition: .23s ease-in-out;
+}
+
+html body #submitedForm .content button.closeBtn:hover {
+  color: #06BCC1;
 }
 
 ::-webkit-scrollbar {
