--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -376,7 +376,7 @@ html{
                     #secondary-image{
                         height: 40%;
                         width: 100%;
-                        background-image: url('../images/homePage/secondaryImage2.jpg');
+                        background-image: url('../images/homePage/secondaryImage.jpg');
                         background-position: center;
                     }
                 }
@@ -826,9 +826,10 @@ html{
                             .prices{
                                 margin-top: 20px;
                             }
+                            .author{
+                                padding: 4px;
+                            }
                             .discaunt{
-                                // width: 50px;
-                                // height: 20px;
                                 position: absolute;
                                 top: 10%;
                                 left: 5%;
@@ -1434,6 +1435,24 @@ html{
                     &:hover{
                         color: $blue;
                     }
+                }
+            }
+        }
+        .preloader{
+            width: 100%;
+            top: 0;
+            z-index: 200;
+            position: fixed;
+            height: 100%;
+            background-color: rgba(6, 188, 193, .9);
+            background-color: #fefefe;
+            @include flexbox();
+            justify-content: center;
+            .content{
+                @include flexbox();
+                justify-content: center;
+                img{
+                    width: 250px;
                 }
             }
         }
