--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -596,6 +596,30 @@
                         }
                     }
                 }
+                .author{
+                    .col{
+                        margin: 30px 0;
+                        img{
+                            height: 350px;
+                            border-radius: 12px;
+                        }
+                        h2{
+                            font-size: 1.5rem;
+                        }
+                        p{
+                            max-width: 500px;
+                            opacity: .85;
+                        }
+                        a{
+                            font-size: 1.1rem;
+                            @include transition();
+                            &:hover{
+                                background-color: $white;
+                                color: $blue;
+                            }
+                        }
+                    }
+                }
             }
         }
     }
@@ -922,7 +946,6 @@
                     height: auto;
                     #main-image{
                         height:450px;
-                        background: url('/assets/images/homePage/sec3.jpg');
                         background-position: top;
                         background-size: cover;
                     }
